--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <body>
     <img src="img/km-logo.png" alt="Kiss Metrics">
 
-    <h1>Hey!</h1>
+    <h1>A sortable table</h1>
+    <div id="table"></div>
 
     <sortable-table></sortable-table>
     <script type='text/javascript' src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type='text/javascript' src='//canjs.us/release/latest/can.jquery.min.js'></script>
-    <script type='text/javascript' src='js/app.js'></script>
+    <script type='text/javascript' src='js/people.js'></script>
+    <script type='text/javascript' src='js/main.js'></script>
   </body>
 </html>
