adding an appropriate placeholder

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <span>{{country}}</span>
           </td>
           <td>
-            <input class="visuallyhidden" type="text" name="birthday" value="{{birthday}}" placeholder="August 11th, 1953">
+            <input class="visuallyhidden" type="text" name="birthday" value="{{birthday}}" placeholder="August 11, 1953">
             <span>{{prettyDate birthday}}</span>
           </td>
           <td>
